<?xml version="1.0" ?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/XMLSchema"?>
<package format="3">
  <name>clover2_pose_msgs</name>
  <version>0.0.0</version>
  <description>Messages for Clover2 localization features</description>
  <maintainer email="2663161@mail.ru">l_motya</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>rosidl_cmake</build_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>clover2_common</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
